--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,62 @@ body {
   margin-bottom: 20px;
 }
 
+/*------ Content -------- */
+
 .content-wrapper {
   background-color: white;
   border-radius: 10px;
   padding: 20px 10px;
+}
+
+#word,
+#search-word {
+  outline: none;
+  margin-right: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+  #word,
+  #search-word {
+    outline: none;
+    margin-bottom: 10px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    height: 30px;
+  }
+}
+
+.add-word {
+  border: none;
+  padding: 7px 10px;
+  border-radius: 10px;
+}
+
+button:focus {
+  box-shadow: none !important;
+}
+
+.table-content {
+  margin-top: 20px !important;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+/*------ Modal -------- */
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px !important;
+}
+
+.modal-word-header {
+  margin: 0;
+}
+
+.modal-content {
+  margin: 10px 5px !important;
 }
